# P2P_Media_Desktop_App_-WebRTC_Calls-RTMP_Streaming-Conversations-

./: .gitignore  README.md  ecosystem.config.cjs  install-coturn.sh  install.sh  package-lock.json  package.json  tsconfig.base.json  turbo.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: rtmp.rs
apps/desktop/src/components/: CallPanel.module.css  CallPanel.tsx  ChatPanel.module.css  ChatPanel.tsx  CreateConversationModal.tsx  IncomingCallBanner.module.css  IncomingCallBanner.tsx  MembersPanel.module.css  MembersPanel.tsx  Modal.module.css  RtmpPanel.module.css  RtmpPanel.tsx  Sidebar.module.css  Sidebar.tsx
apps/desktop/src/hooks/: useRtmp.ts  useWebRTC.ts
apps/desktop/src/lib/: api.ts
apps/desktop/src/pages/: ConversationView.module.css  ConversationView.tsx  LoginPage.tsx  MainLayout.module.css  MainLayout.tsx  RegisterPage.tsx  auth.module.css
apps/desktop/src/stores/: auth.store.ts  call.store.ts  conversation.store.ts  message.store.ts  ws.store.ts
apps/desktop/src/styles/: global.css
apps/server/: .env.example  drizzle.config.ts  package.json  tsconfig.json
apps/server/drizzle/: 0000_init.sql  0001_conversations.sql  0002_messages.sql
apps/server/src/: index.ts
apps/server/src/config/: env.ts
apps/server/src/db/: index.ts  schema.ts
apps/server/src/lib/: jwt.ts
nginx/: dedicated.conf  subdomain.conf
(+23 files in other folders)
