[package]
name = "p2p-media"
version = "0.1.0"
description = "P2P Media Desktop App"
authors = ["you"]
license = "MIT"
repository = ""
default-run = "p2p-media"
edition = "2021"
rust-version = "1.77"

[lib]
name = "p2p_media_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "p2p-media"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Phase 10 : pilotage FFmpeg
# tokio-process = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
